feat: generate ai book api implemented
