# apps/api/src/models/index.ts
@@ -1,6 +1,7 @@
 import Book from "./book.js";
 import Chapter from "./chapter.js";
+import DraftAiBook from "./draftAiBook.js";
 import Section from "./section.js";
 import User from "./user.js";
 
-export { Book, Chapter, Section, User };
+export { Book, Chapter, DraftAiBook, Section, User };
